--- a/main.css
+++ b/main.css
@@ -9,33 +9,18 @@ body {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-@media screen and (min-width: 1054px) {
-  .container {
-    width: 1054px;
-  }
-}
 .hero {
+  position: relative;
   background-color: #cbecff;
   width: 100%;
-  height: 670px;
+  padding-bottom: 20px;
 }
 
 .lang {
   display: flex;
   justify-content: flex-end;
   padding-top: 22px;
-  margin-bottom: 80px;
+  margin-bottom: 410px;
 }
 .lang_list {
   display: flex;
@@ -60,7 +45,7 @@ body {
 
 .hero_title {
   font-weight: 700;
-  font-size: 64px;
+  font-size: 50px;
   line-height: 1.3;
 }
 .title_right {
@@ -73,16 +58,18 @@ body {
 }
 
 .hero_text {
-  width: 380px;
+  width: 300px;
   margin-top: 10px;
   margin-bottom: 40px;
-  font-size: 22px;
-  line-height: 130%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.3;
   color: #29374e;
 }
 .hero_btn {
-  width: 200px;
+  width: 100%;
   height: 52px;
+  margin-bottom: 15px;
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 18px;
@@ -92,4 +79,141 @@ body {
   border-radius: 12px;
   outline: none;
   border: none;
+}
+
+.advantages_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.advantages_item {
+  position: relative;
+  width: 165px;
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 42px 11px 16px 18px;
+  background-color: #ffffff;
+  box-shadow: 6px 4px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+}
+
+.icon_block {
+  position: absolute;
+  top: -6px;
+  left: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 8px;
+  background-color: #eff9ff;
+  border-radius: 50%;
+}
+.icon {
+  width: 24px;
+  height: 24px;
+}
+.advantages_text {
+  width: 100%;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #29374e;
+}
+
+@media screen and (min-width: 375px) {
+  .advantages_item {
+    padding: 42px 11px 16px 18px;
+  }
+  .advantages_list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+  .hero_btn {
+    width: 200px;
+  }
+  .advantages_text {
+    width: 130px;
+  }
+  .advantages_item:nth-child(2n) {
+    margin-left: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .hero_image {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+  }
+  .img {
+    width: 500px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .hero_title {
+    font-size: 64px;
+  }
+  .hero_text {
+    width: 380px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    font-size: 22px;
+    line-height: 1.3;
+  }
+  .hero_image {
+    position: absolute;
+    top: 30px;
+    right: -40px;
+  }
+  .img {
+    width: 600px;
+  }
+  .advantages_item {
+    width: 240px;
+    padding: 22px 40px 30px 20px;
+    margin-right: 20px;
+  }
+  .advantages_item:nth-child(2n) {
+    margin-left: 0;
+  }
+  .icon_block {
+    top: 15px;
+    left: 190px;
+  }
+}
+@media screen and (min-width: 1054px) {
+  .hero {
+    height: 670px;
+  }
+  .container {
+    width: 1054px;
+    height: 100%;
+    position: relative;
+  }
+  .lang {
+    margin-bottom: 80px;
+  }
+
+  .advantages_list {
+    position: absolute;
+    bottom: -80px;
+    left: 0;
+  }
+  .advantages_item {
+    width: 240px;
+    padding: 22px 40px 30px 20px;
+  }
 }
