--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body {
   background-color: #cbecff;
   width: 100%;
   padding-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .lang {
@@ -32,15 +33,18 @@ body {
   width: 26px;
   height: 26px;
   margin-left: 15px;
+  cursor: pointer;
 }
 
 .lang_item.active {
   background-color: #fff;
   border-radius: 50%;
+  cursor: pointer;
 }
 .lang_link {
   font-size: 14px;
   line-height: 1.4;
+  cursor: pointer;
 }
 
 .hero_title {
@@ -66,7 +70,8 @@ body {
   line-height: 1.3;
   color: #29374e;
 }
-.hero_btn {
+.hero_btn,
+.value_btn {
   width: 100%;
   height: 52px;
   margin-bottom: 15px;
@@ -79,6 +84,7 @@ body {
   border-radius: 12px;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 .advantages_list {
@@ -136,7 +142,8 @@ body {
   .container {
     width: 480px;
   }
-  .hero_btn {
+  .hero_btn,
+  .value_btn {
     width: 200px;
   }
   .advantages_text {
@@ -156,7 +163,7 @@ body {
     overflow: hidden;
   }
   .img {
-    width: 500px;
+    width: 400px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -175,11 +182,12 @@ body {
   }
   .hero_image {
     position: absolute;
-    top: 30px;
-    right: -40px;
+    top: 35px;
+    right: 10px;
+    overflow: hidden;
   }
   .img {
-    width: 600px;
+    width: 420px;
   }
   .advantages_item {
     width: 240px;
@@ -197,6 +205,14 @@ body {
 @media screen and (min-width: 1054px) {
   .hero {
     height: 670px;
+    margin-bottom: 142px;
+  }
+  .hero_image {
+    top: 35px;
+    right: -40px;
+  }
+  .img {
+    width: 620px;
   }
   .container {
     width: 1054px;
@@ -215,5 +231,187 @@ body {
   .advantages_item {
     width: 240px;
     padding: 22px 40px 30px 20px;
+  }
+}
+
+/* ---PRODUCTS-- */
+.products {
+}
+.products_title,
+.value_title {
+  text-align: center;
+  margin-bottom: 24px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.3;
+  color: #29374e;
+}
+.title_important {
+  color: #0962e8;
+}
+
+.products_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.products_item {
+  display: flex;
+  justify-content: space-between;
+  width: 305px;
+  height: 215px;
+  margin-bottom: 16px;
+  padding-top: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: #e9f6ff;
+  border-radius: 30px;
+}
+.products_text {
+  width: 162px;
+  line-height: 1.4;
+  color: #29374e;
+}
+.primary_text {
+  font-weight: 600;
+  font-size: 16px;
+}
+.secondary_text {
+  font-weight: 400;
+  font-size: 13px;
+}
+.product_img {
+  width: 142px;
+}
+
+/* ---VALUE-- */
+
+.value {
+  margin-top: 20px;
+}
+.value_left {
+  margin-bottom: 32px;
+}
+.value_text {
+  text-align: center;
+  margin-bottom: 12px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #29374e;
+}
+.value_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value_item {
+  position: relative;
+  width: 164px;
+  margin-bottom: 20px;
+  padding: 40px 11px 16px 18px;
+  background-color: #fff;
+  box-shadow: 6px 4px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+}
+.value_icon_block {
+  position: absolute;
+  top: -6px;
+  left: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  margin-bottom: 8px;
+  background-color: #eff9ff;
+  border-radius: 50%;
+}
+.value_item_text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+
+  color: #29374e;
+}
+
+@media screen and (min-width: 375px) {
+  .value_list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 480px) {
+  .products_item {
+    width: 345px;
+    height: 215px;
+    padding-top: 25px;
+    padding-left: 16px;
+    padding-right: 20px;
+  }
+  .product_img {
+    width: 142px;
+  }
+}
+@media screen and (min-width: 1054px) {
+  .products_title {
+    margin-bottom: 44px;
+  }
+  .products_list {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .products_item {
+    width: 502px;
+    height: 328px;
+    padding-top: 37px;
+    padding-left: 20px;
+    padding-right: 33px;
+  }
+  .products_text {
+    width: 200px;
+    color: #000000;
+  }
+  .primary_text {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+  .secondary_text {
+    font-size: 14px;
+  }
+  .product_img {
+    width: 218px;
+  }
+  .value {
+    margin-top: 100px;
+  }
+  .value .container {
+    display: flex;
+  }
+  .value_title {
+    text-align: left;
+    font-weight: 500;
+    font-size: 38px;
+  }
+  .value_text {
+    text-align: left;
+    width: 410px;
+    margin-bottom: 37px;
+  }
+  .value_left {
+    margin-right: 20px;
+    width: 800px;
+  }
+  .value_right {
+    margin-top: 20px;
+  }
+  .value_item {
+    width: 230px;
+    box-shadow: none;
+  }
+  .value_icon_block {
+    width: 40px;
+    height: 40px;
   }
 }
